--- a/package.json
+++ b/package.json
@@ -4,18 +4,23 @@
   "private": true,
   "scripts": {
     "start:dev": "next dev --turbopack",
-    "start:build": "next build",
-    "start": "next start",
+    "start:prod": "next start",
+    "build": "next build",
     "lint": "next lint",
     "formate": "prettier . --write",
     "prepare": "husky"
   },
   "dependencies": {
+    "@dnd-kit/core": "^6.3.1",
+    "@dnd-kit/helpers": "^0.1.21",
+    "@dnd-kit/modifiers": "^9.0.0",
+    "@dnd-kit/react": "^0.1.21",
     "@radix-ui/react-dropdown-menu": "^2.1.15",
     "@radix-ui/react-separator": "^1.1.7",
     "@radix-ui/react-slot": "^1.2.3",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "framer-motion": "^12.23.12",
     "lucide-react": "^0.534.0",
     "next": "15.4.5",
     "next-themes": "^0.4.6",
